完善在线聊天功能

--- a/src/main/webapp/resources/js/common/artDialog/_doc/highlight/test.html
+++ b/src/main/webapp/resources/js/common/artDialog/_doc/highlight/test.html
@@ -824,7 +824,7 @@ ExpiresByType application/x-javascript  "access plus 1 days"
   <tr>
     <th>nginx
     <td>
-<pre><code>user  www www;
+<pre><code>userEntity  www www;
 worker_processes  2;
 pid /var/run/nginx.pid;
 error_log  /var/log/nginx.error_log  debug | info | notice | warn | error | crit;
